Fix on waves divider overflow

--- a/src/components/Index/IndexBlog/index-blog.module.css
+++ b/src/components/Index/IndexBlog/index-blog.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   margin: 0;
-  padding: 0 0 60px;
+  padding: 0 0 120px;
   background-color: var(--blue100);
   z-index: 10;
 }
