--- a/src/components/WavesDivider/waves-divider.module.css
+++ b/src/components/WavesDivider/waves-divider.module.css
@@ -1,3 +1,8 @@
+.container {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .waves {
   width: 180%;
   margin: 0;
